fix images scaling out of bounds on docs

--- a/docs/_includes/critical.scss
+++ b/docs/_includes/critical.scss
@@ -87,6 +87,10 @@ a {
 .content {
   -webkit-box-flex: 1;
 
+  img {
+    width: 100%;
+  }
+
   h1, h2, h3, h4, h5 {
     position: relative;
 
